# autoria-clone

./: .env  docker-compose.yml  postman_collection.json  pyproject.toml  requirements.txt
apps/auth/: urls.py  views.py
apps/cars/: choices.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_alter_carmodel_brand_alter_carmodel_model.py
apps/carshops/: models.py  serializers.py  urls.py  views.py
apps/carshops/migrations/: 0001_initial.py  0002_alter_carshopmodel_name.py  0003_alter_staffmodel_phone.py  0003_carshopmodel_user.py
apps/currencies/migrations/: 0001_initial.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_usermodel_table.py  0002_remove_usermodel_carshop.py  0003_alter_usermodel_last_login.py  0004_usermodel_is_carshop.py
backend/: manage.py
backend/apps/auth/: views.py
backend/apps/cars/: filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/carshops/: apps.py  choices.py  serializers.py  views.py
backend/apps/currencies/: models.py  serializers.py  urls.py  views.py
backend/apps/users/: serializers.py  (+1 more)
backend/configs/: celery.py  settings.py  urls.py
backend/templates/: add_brand_request.html  recover_password.html  spam.html
configs/: settings.py  urls.py
configs/extra_configs/: jwt_config.py  rest_config.py
core/: models.py  pagination.py  permissions.py
core/enums/: car_enum.py  carshop_enum.py
core/services/: email_service.py  jwt_service.py
templates/: base.html
(+18 files in other folders)
